--- a/team.html
+++ b/team.html
@@ -95,6 +95,12 @@
                 </div>
             </div>  
         </div>  
+
+        <!-- JS script for hamburger menu animation and responsive navbar -->
+        <script src="js/script.js"></script>
+        <!--NAVBAR END-->
+
+
         <footer>
             <div class="footertext">
                 <p>Copyright of Purple Penguins, 2024.</p>
