--- a/team.html
+++ b/team.html
@@ -58,7 +58,7 @@
             <div class= "pictcolumn">
                 <div class= "picttext">
                     <h2> Kayla O'Neill</h2>
-                    <img src="assets/Penguin4.jpeg" alt="KaylaPenguin">
+                    <img src="assets/Kayla.jpg" alt="Kayla">
                     <div class="team-link">
                         <a href ="https://www.linkedin.com/in/kayla-o-neill-272182216/" target="_blank" class="link">LinkedIn</a>
                     </div>
@@ -67,7 +67,7 @@
             <div class= "pictcolumn">
                 <div class= "picttext">
                     <h2>Maya Ivimey</h2>
-                    <img src="assets/Penguin1.jpeg" alt="MayaPenguin">
+                    <img src="assets/Maya.jpg" alt="Maya">
                     <div class="team-link">
                         <a href ="https://www.linkedin.com/in/maya-ivimey-82b01218a/" target="_blank" class="link">LinkedIn</a>
                     </div>
@@ -78,7 +78,7 @@
             <div class="pictcolumn">
                 <div class= "picttext">
                     <h2>Lilit Markarian</h2>
-                    <img src="assets/Penguin3.jpeg" alt="LilitPenguin">
+                    <img src="assets/Lilit.JPG" alt="Lilit">
                     <div class="team-link">
                         <a href ="https://www.linkedin.com/in/lilitmarkarian/" target="_blank" class="link">LinkedIn</a>
                     </div>
@@ -88,7 +88,7 @@
             <div class= "pictcolumn">
                 <div class= "picttext">
                     <h2>Lori Lowy</h2>
-                    <img src="assets/Penguin5.jpeg" alt="LoriPenguin">
+                    <img src="assets/Lori.heic" alt="Lori">
                     <div class="team-link">
                         <a href ="https://www.linkedin.com/in/lori-lowy-13b6122aa/" target="_blank" class="link">LinkedIn</a>
                     </div>
