--- a/team.html
+++ b/team.html
@@ -78,7 +78,7 @@
             <div class="pictcolumn">
                 <div class= "picttext">
                     <h2>Lilit Markarian</h2>
-                    <img src="assets/Lilit.JPG" alt="Lilit">
+                    <img src="assets/Lilit1.jpg" alt="Lilit">
                     <div class="team-link">
                         <a href ="https://www.linkedin.com/in/lilitmarkarian/" target="_blank" class="link">LinkedIn</a>
                     </div>
